--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -40,7 +40,7 @@
       <div class="ps-row ps-padding-64" id="menu">
         <div class="ps-col l6 ps-padding-large">
           <h1 class="ps-center">Menu para administración</h1>
-            <h4><a href="#">Administración de usuarios</a></h4>
+            <h4><a href="/admin/users">Administración de usuarios</a></h4>
             <h4><a href="/admin/productos">Administración de los productos</a></h4>
             <p class="ps-text-grey">
               Los cambios realizados modifican la base de datos
