--- a/src/views/partials/menu_iconos.ejs
+++ b/src/views/partials/menu_iconos.ejs
@@ -1,7 +1,7 @@
 <nav class="nav_menu2">
     <ul class="ul_2">
-        <li><a href="/login"><img src="/images/user-solid.svg" alt="Login" ></a></li>
-        <li><a href="/register"><img src="/images/user-plus-solid.svg" alt="registro" ></a></li>
+        <li><a href="/users/login"><img src="/images/user-solid.svg" alt="Login" ></a></li>
+        <li><a href="/users/register"><img src="/images/user-plus-solid.svg" alt="registro" ></a></li>
         <li><a href="/cart"><img src="/images/cart-shopping-solid.svg" alt="carrito" ></a></li>
     </ul>
 </nav>
