--- a/src/views/partials/newsletter.ejs
+++ b/src/views/partials/newsletter.ejs
@@ -1,5 +1,5 @@
 <div class="body_footer">
-    <form class="form_footer" action="/subscripcion" method="post" id="form_footer">
+    <form class="form_footer" action="/newsletter" method="POST" id="form_footer">
         <div class="subscribe">
             <label for="email">Recibí nuestras ofertas:</label>
             <input type="email" name="email" id="email" required placeholder="correo electrónico">
