--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -19,7 +19,7 @@
                                 <p><strong> <%= package.package_title %> </strong></p>
                             </div>
                             <div class="product_price">
-                                <p><strong> <%= package.package_price %> </strong></p>
+                                <p><strong>ARS <%= package.package_price %> </strong></p>
                             </div>
                         </div>
                         <!--<div class="subtitle_button">
@@ -37,7 +37,7 @@
                     <h4>El paquete inlcuye:</h4>
                     <div>
                         <ul>
-                            <p><strong>Alojamiento en el <%= package.package_hotel %> <%= package.package_stars_hotel %></strong></p>
+                            <p><strong>Alojamiento en el <%= package.package_hotel %> de <%= package.package_stars_hotel %> estrellas</strong></p>
                         </ul>
                     </div>
                     <div>
