--- a/src/views/products/package_edit.ejs
+++ b/src/views/products/package_edit.ejs
@@ -71,9 +71,7 @@
         </div>
         <div class="control_formulario">
             <label>package_description: </label>
-            <textarea name="package_description" class="control" form= 'form_edit' rows="2">
-                    <%= package.package_description%>
-            </textarea>
+            <textarea name="package_description" class="control"><%= package.package_description%></textarea>
         </div>
         <div class="control_formulario">
             <label>package_date_admission: </label>
