--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -7,7 +7,7 @@
         <main class="background">
             <section class="container_register">
                 <div class="register_form">
-                    <form action="" method="POST">
+                    <form action="/users/register" method="POST"> <!--revisar ruteo action-->
                         <h3>Registrate</h3>
                         <div>
                             <div class="input_register">
@@ -26,7 +26,7 @@
                         </div>
                         <div>
                             <div class="input_register">
-                                <input type="password" name="password" class="input_box" placeholder="Confirmar contraseña" required maxlength="40">
+                                <input type="password" name="password_valid" class="input_box" placeholder="Confirmar contraseña" required maxlength="40">
                             </div>
                         </div>
                         <div>
