--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -15,5 +15,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="/css/normalize.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"> 
-    <script src="https://kit.fontawesome.com/a2385b59a3.js" crossorigin="anonymous"></script> 
+    <script src="https://kit.fontawesome.com/a2385b59a3.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/png" href="/images/favicon-bg.png"> <!--logo en la pestaña del navegador-->
 </head>
