--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -11,7 +11,7 @@
             </div>
             <section class="container_login">
                 <div class="login_form">
-                    <form action="" method="">
+                    <form action="" method="GET">
                         <h3>Iniciar Sesión</h3>
                         <div>
                             <div class="input">
